@@ -3,8 +3,11 @@ firefox-trunk (10.0~a1~hg20111108r79928-0ubuntu2) UNRELEASED; urgency=low
   * Update globalmenu-extension to 2.5 prerelease r266
   * Turn off the one-time addon selection dialog (LP: #888307)
     - update debian/vendor.js
+  * Ensure we include locales in the tarball if they are in shipped-locales
+    but not in all-locales
+    - update debian/build/create-tarball.py
 
- -- Chris Coulson <chris.coulson@canonical.com>  Thu, 10 Nov 2011 19:55:51 +0000
+ -- Chris Coulson <chris.coulson@canonical.com>  Tue, 15 Nov 2011 17:27:55 +0000
 
 firefox-trunk (10.0~a1~hg20111108r79928-0ubuntu1) oneiric; urgency=low
 
